# mcp

chart-mcp-server/: README.md  mcp.example.json  mcp.json  pyproject.toml  test_chart.py  test_real_ocr.py
chart-mcp-server/src/chart/: __init__.py  chart_service.py  minio_client.py  ocr_service.py  server.py
file/: README.md  mcp.example.json  pyproject.toml
file/config/static/templates/: meeting_minutes.txt  notice.txt
file/src/file/: __init__.py  config.py  server.py
graph/: README.md  mcp.example.json  pyproject.toml
graph/src/graph/: __init__.py  neo4j_repository.py  repository.py  server.py
graph/src/graph_server/: __init__.py  __main__.py  server.py
reporter/: .gitignore  mcp.example.json  pyproject.toml
reporter/src/reporter/: __init__.py  config.py  server.py
schedule-mcp-server/: README.md  check_jobs.py  clean_jobs.py  jobs.sqlite  mcp.example.json  mcp.json  pyproject.toml  test_jobs.py
schedule-mcp-server/src/schedule/: __init__.py  push_server_combined.py  pusher.py  scheduler.py  server.py  utils.py
schedule-mcp-server/test/: check_latest_push.py  mock_screen_test.py  push_records.db  quick_test.py  test_deploy.py  test_mcp.py  test_push_connection.py
weather/: .gitignore  README.md  mcp.example.json  pyproject.toml
weather/src/weather/: __init__.py  config.py  qweather_client.py  server.py
weather/tests/: test_imports.py  test_qweather_client.py  test_server_tools.py
word/: README.md  mcp.example.json  pyproject.toml
word/src/word/: __init__.py  config.py  server.py
