[project]
name = "file"
version = "0.1.0"
description = "File Template MCP Server - 文档模板填充服务"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.0.8",
    "jinja2>=3.1.3",
]

[project.scripts]
file-mcp = "file.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling]
package-dir = "src"
packages = ["file"]
