[project]
name = "graph"
version = "0.1.0"
description = "Neo4j MCP Server - 图数据库查询服务"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
neo4j-mcp = "graph_server.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling]
package-dir = "src"
packages = ["graph_server"]
